--- a/ryuuk.conf
+++ b/ryuuk.conf
@@ -27,6 +27,7 @@ jpeg    = image/jpeg
 jpg     = image/jpeg
 bmp     = image/bmp
 ico     = image/x-icon
+webp    = image/webp
 
 #Basic audio types
 aac     = audio/aac
